[gd_scene load_steps=11 format=3 uid="uid://cio243vevqpk7"]

[ext_resource type="Theme" uid="uid://khyscqqmwjts" path="res://main_theme.tres" id="1_aqdlq"]
[ext_resource type="Script" uid="uid://cv0n12h4c4dh6" path="res://scenes/card_ui/card_ui.gd" id="2_mbmut"]
[ext_resource type="Script" uid="uid://b7mpmms7w6nr5" path="res://scenes/card_ui/card_state_machine.gd" id="3_7aodr"]
[ext_resource type="PackedScene" uid="uid://b2qx4v4d07f0i" path="res://scenes/ui/card_visuals.tscn" id="3_ci03s"]
[ext_resource type="Script" uid="uid://b7n2lt3dwx8oa" path="res://scenes/card_ui/card_states/card_base_state.gd" id="4_ajlk2"]
[ext_resource type="Script" uid="uid://bdob0nr6tmgk8" path="res://scenes/card_ui/card_states/card_clicked_state.gd" id="5_8r4n5"]
[ext_resource type="Script" uid="uid://2p3kxp0geahi" path="res://scenes/card_ui/card_states/card_dragging_state.gd" id="6_lx6uh"]
[ext_resource type="Script" uid="uid://w3eiqu4c1pte" path="res://scenes/card_ui/card_released_state.gd" id="7_ptsiw"]
[ext_resource type="Script" uid="uid://b54o3vxg885b2" path="res://scenes/card_ui/card_states/card_aiming_state.gd" id="8_yxx8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tp7oj"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aqdlq")
script = ExtResource("2_mbmut")

[node name="CardVisuals" parent="." instance=ExtResource("3_ci03s")]
offset_right = 25.0
offset_bottom = 30.0
mouse_filter = 2

[node name="DropPointDetector" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_tp7oj")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7aodr")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_ajlk2")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_8r4n5")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_lx6uh")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_ptsiw")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_yxx8x")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
